<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_hint"
    android:layout_width="match_parent"
    >

    <include android:id="@+id/toolbar" layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                style="@style/EditTextTheme"
                android:hint="@string/input_reg_username_hint"
                android:id="@+id/register_ed_username"/>
            <ImageView
                style="@style/EditTextIconTheme"
                android:src="@drawable/phone"/>
            <Button
                android:id="@+id/button"
                style="@style/SmallBtnTheme"
                android:layout_gravity="end|center_vertical"
                android:text="@string/get_code"
                android:layout_marginRight="10dp"
                android:background="@drawable/small_btn_bg"
                android:layout_width="64dp"
                android:layout_height="30dp" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                style="@style/EditTextTheme"
                android:hint="@string/input_reg_code_hint"
                android:inputType="number"
                android:id="@+id/register_ed_code"/>
            <ImageView
                style="@style/EditTextIconTheme"
                android:src="@drawable/code"/>
        </FrameLayout>
        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp">
            <EditText
                style="@style/EditTextTheme"
                android:hint="@string/input_password_hint"
                android:inputType="textPassword"
                android:id="@+id/register_ed_pwd"/>
            <ImageView
                style="@style/EditTextIconTheme"
                android:src="@drawable/password_input_icon"/>
        </FrameLayout>
        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp">
            <EditText
                style="@style/EditTextTheme"
                android:hint="@string/input_password_confirm_hint"
                android:inputType="textPassword"
                android:id="@+id/register_ed_confirm_pwd"/>
            <ImageView
                style="@style/EditTextIconTheme"
                android:src="@drawable/password_input_icon"/>
        </FrameLayout>
    </LinearLayout>

    <Button
        style="@style/RoundPrimaryBtnTheme"
        android:text="@string/reg"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:background="@drawable/primary_btn_bg"
        android:id="@+id/register_btn_register"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="注册即视为同意《"
            android:textColor="@color/hint"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="91加速用户协议"
            android:id="@+id/user_pro"
            android:textColor="@color/primary_btn_pressed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="》"
            android:textColor="@color/hint"/>
    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:paddingBottom="@dimen/btn_gap"
        android:orientation="vertical">
         <LinearLayout
             android:id="@+id/contact_area"
             android:layout_width="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content">
             <TextView
                 style="@style/CenterHintTextViewTheme"
                 android:text="@string/contact_server" />
             <ImageView
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_marginTop="5dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/up_arrow"/>
         </LinearLayout>
    </LinearLayout>

</LinearLayout>
