<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/light_hint"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView
            style="@style/logo"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <EditText
                    style="@style/EditTextTheme"
                    android:hint="@string/input_username_hint"
                    android:id="@+id/login_ed_username"/>
                <ImageView
                    style="@style/EditTextIconTheme"
                    android:src="@drawable/username_input_icon"/>
            </FrameLayout>
            <FrameLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp">
                <EditText
                    style="@style/EditTextTheme"
                    android:hint="@string/input_password_hint"
                    android:inputType="textPassword"
                    android:id="@+id/login_ed_password"/>
                <ImageView
                    style="@style/EditTextIconTheme"
                    android:src="@drawable/password_input_icon"/>
            </FrameLayout>
        </LinearLayout>

        <Button
            style="@style/RoundPrimaryBtnTheme"
            android:text="@string/login"
            android:background="@drawable/round_primary_btn_bg"
            android:id="@+id/login_btn_login"/>

        <Button
            style="@style/RoundSecondaryBtnTheme"
            android:text="@string/register"
            android:background="@drawable/round_secondary_btn_bg"
            android:id="@+id/login_btn_register"/>
        <LinearLayout
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/check_area"
                android:layout_height="match_parent">
                <CheckBox
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:checked="true"
                    android:layout_gravity="center_vertical"
                    android:button="@null"
                    android:background="@drawable/checkbox"
                    android:id="@+id/cbx_rmp"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/hint_size"
                    android:textColor="@color/hint"
                    android:layout_gravity="center_vertical"
                    android:text="记住我"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/ret_pwd"
                style="@style/CenterHintTextViewTheme"
                android:layout_height="match_parent"
                android:textColor="@color/hint"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginTop="0dp"
                android:text="@string/retrieve_password"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:paddingBottom="@dimen/btn_gap"
            android:orientation="vertical">
            <LinearLayout android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/edit_text_margin"
                android:layout_marginRight="@dimen/edit_text_margin"
                android:orientation="vertical"
                android:id="@+id/login_crouton"
                android:layout_gravity="top"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/contact_area"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/CenterHintTextViewTheme"
                    android:text="@string/contact_server" />
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/up_arrow"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
